# company-tool-employee-feedback-tracker

./: README.md
backend/: .env  pyproject.toml
backend/backend/: settings.py  urls.py
backend/feedback/: api.py  models.py  schema.py  urls.py
backend/feedback/migrations/: 0001_initial.py  0002_remove_feedback_name_feedback_employee_name_and_more.py
frontend/: .env  index.html  package-lock.json
frontend/src/: App.tsx  main.tsx
frontend/src/pages/: AddFeedback.tsx  FeedbackList.tsx  LandingPage.tsx
