[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Ankur Jaiswal",email = "ankurjaiswalofficial@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "django-ninja (>=1.4.3,<2.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "django-channels (>=0.7.0,<0.8.0)",
    "channels[redis] (>=4.3.1,<5.0.0)",
    "psycopg (>=3.2.10,<4.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
